--- a/css/global.css
+++ b/css/global.css
@@ -17,6 +17,7 @@ header {
 }
 
 h1 {
+  margin-top: 40px;
   margin-bottom: 20px;
   font-size: 2rem;
 }
@@ -29,7 +30,7 @@ h1 {
   flex-direction: column;
   text-align: center;
   background: rgba(255, 255, 255, 0.8); /* Slightly transparent background */
-  padding: 20px;
+
   border-radius: 8px;
   box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
   width: 100%;
