--- a/css/timeline.css
+++ b/css/timeline.css
@@ -59,8 +59,8 @@
   }
 
   .arrow {
-    width: 15px;
-    height: 15px;
+    width: 20px;
+    height: 20px;
     top: -10px;
   }
 }
@@ -75,8 +75,8 @@
   }
 
   .arrow {
-    width: 12px;
-    height: 12px;
+    width: 18px;
+    height: 18px;
     top: -10px;
   }
 }
